First added files

--- a/about.html
+++ b/about.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VJC EarthWatch</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5./jquery.min.js"></script>
-    <script type="text/javascript" src="fullpage.js"></script>
+    <script type="text/javascript" src="jquery.min.js"></script>
     <link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' >
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" type="text/css" href="cleanedraster.css">
+    <link rel="stylesheet" type="text/css" href="raster.css">
     <link rel="stylesheet" type="text/css" href="fullpage.css">
  </head>
 
@@ -19,7 +18,7 @@
     <nav class="navbar">
         <li><a href="index.html">HOME</a></li>
         <li><a href="about.html">ABOUT</a></il>
-        
+
         <!-- The dropdown container -->
         <li><div class="dropdown">
             <button class="dropbtn">PLANTS OF VICTORIA
@@ -29,7 +28,7 @@
                 <a href="vjc_sign_garden.html">VJC Sign Garden</a>
                 <a href="nursery.html">Nursery</a>
                 <a href="garden_drop-off_point.html">Garden @ Drop-off Point</a>
-                <a href="outside_concourse.html">Plot of Land Outside</a> <!--to be changed-->
+                <a href="outside_concourse.html">Outside Concourse</a>
             </div>
         </div></li>
         <li><a href="acknowledgements.html">ACKNOWLEDGEMENTS</a></li>
@@ -41,14 +40,14 @@
     </div>
 
     <div class="container">
-        <p> 
-          Earth Watch is an environmental club within VJC that is full of like-minded individuals who aim to transform the college (and beyond!) into a 
-          more ecologically conscious community. From our annual Earthweek events to weekly CCA sessions, Earth Watch is more than a CCA; It is a platform 
-          for Victorians to come together, and a springboard to bring their ideas to life while living responsibly and tackling the environmental issues we 
-          are facing. We hope that our initiatives - big and small - would compel others to play their part for the environment and in doing so, we will be 
-          making a difference day by day. 
+        <p>
+          Earth Watch is an environmental club within VJC that is full of like-minded individuals who aim to transform the college (and beyond!) into a
+          more ecologically conscious community. From our annual Earthweek events to weekly CCA sessions, Earth Watch is more than a CCA; It is a platform
+          for Victorians to come together, and a springboard to bring their ideas to life while living responsibly and tackling the environmental issues we
+          are facing. We hope that our initiatives - big and small - would compel others to play their part for the environment and in doing so, we will be
+          making a difference day by day.
         </p>
-    </div> 
+    </div>
 
     <footer>
         <p>ABOUT US</p>
@@ -60,7 +59,7 @@
                     <!-- Placeholder img -->
                     <img src="assets/resized_earthwatchlogo.jpg">
                 </div>
-                
+
                 <div class="column">
                     <img class="inlineimg" src="assets/instagram.png">
                     <a href="https://instagram.com/vjrobotics">VJ Robotics Makers' Club</a><br>
