--- a/acknowledgements.html
+++ b/acknowledgements.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VJC EarthWatch</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5./jquery.min.js"></script>
-    <script type="text/javascript" src="fullpage.js"></script>
     <link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' >
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" type="text/css" href="cleanedraster.css">
-    <link rel="stylesheet" type="text/css" href="fullpage.css">
- </head>
+    <link rel="stylesheet" type="text/css" href="raster.css">
+</head>
 
 <body>
     <header>
@@ -29,7 +26,7 @@
                     <a href="vjc_sign_garden.html">VJC Sign Garden</a>
                     <a href="nursery.html">Nursery</a>
                     <a href="garden_drop-off_point.html">Garden @ Drop-off Point</a>
-                    <a href="outside_concourse.html">Plot of Land Outside</a> <!--to be changed-->
+                    <a href="outside_concourse.html">Outside Concourse</a>
                 </div>
             </div></li>
             <li><a href="acknowledgements.html">ACKNOWLEDGEMENTS</a></li>
