--- a/plot-of-land.html
+++ b/plot-of-land.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VJC EarthWatch</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5./jquery.min.js"></script>
-    <script type="text/javascript" src="fullpage.js"></script>
+    <script type="text/javascript" src="jquery.min.js"></script>
     <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="search.js"></script>
     <link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' >
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" type="text/css" href="cleanedraster.css">
-    <link rel="stylesheet" type="text/css" href="fullpage.css">
- </head>
+    <link rel="stylesheet" type="text/css" href="raster.css">
+</head>
 
 <body>
     <!-- Header -->
@@ -20,7 +19,7 @@
     <nav class="navbar">
         <li><a href="/">HOME</a></li>
         <li><a href="/about">ABOUT</a></il>
-        
+
         <!-- The dropdown container -->
         <li><div class="dropdown">
             <button class="dropbtn">PLANTS OF VICTORIA
@@ -30,7 +29,7 @@
                 <a href="vjc_sign_garden.html">VJC Sign Garden</a>
                 <a href="nursery.html">Nursery</a>
                 <a href="garden_drop-off_points.html">Garden @ Drop-off Point</a>
-                <a href="outside_concourse.html">Outside Concourse</a> <!--to be changed-->
+                <a href="outside_concourse.html">Outside Concourse</a>
             </div>
         </div></li>
         <li><a href="/acknowledgements">ACKNOWLEDGEMENTS</a></li>
@@ -85,7 +84,7 @@
                     <!-- Placeholder img -->
                     <img src="assets/resized_earthwatchlogo.jpg">
                 </div>
-                
+
                 <div class="column">
                     <img class="inlineimg" src="assets/instagram.png">
                     <a href="https://instagram.com/vjrobotics">VJ Robotics Makers' Club</a><br>
