--- a/garden_drop-off_point.html
+++ b/garden_drop-off_point.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VJC EarthWatch</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5./jquery.min.js"></script>
-    <script type="text/javascript" src="fullpage.js"></script>
+    <script type="text/javascript" src="jquery.min.js"></script>
     <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="search.js"></script>
     <link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' >
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" type="text/css" href="cleanedraster.css">
-    <link rel="stylesheet" type="text/css" href="fullpage.css">
+    <link rel="stylesheet" type="text/css" href="raster.css">
  </head>
 
 <body>
@@ -20,7 +19,7 @@
     <nav class="navbar">
         <li><a href="index.html">HOME</a></li>
         <li><a href="about.html">ABOUT</a></il>
-        
+
         <!-- The dropdown container -->
         <li><div class="dropdown">
             <button class="dropbtn">PLANTS OF VICTORIA
@@ -30,7 +29,7 @@
                 <a href="vjc_sign_garden.html">VJC Sign Garden</a>
                 <a href="nursery.html">Nursery</a>
                 <a href="garden_drop-off_point.html">Garden @ Drop-off Point</a>
-                <a href="outside_concourse.html">Plot of Land Outside</a> <!--to be changed-->
+                <a href="outside_concourse.html">Outside Concourse</a>
             </div>
         </div></li>
         <li><a href="acknowledgements.html">ACKNOWLEDGEMENTS</a></li>
@@ -44,8 +43,8 @@
     <!-- Search bar -->
     <div class="search__floater">
         <div class="search__anchor">
-          <form id="search-form" action="get">
-                <input type="text" class="search__bar" placeholder="Search">
+          <form id="search-form" onsubmit="return searchQuery()">
+                <input type="text" class="search__bar" id="search__val" placeholder="Search">
                 <input class="search__submit" type="submit">
             <div class="search__toggler"></div>
           </form>
@@ -76,7 +75,7 @@
 
 <div class="plant-information">
     <div class="plant-infobox" id="plant-0"> <r-grid columns="8"> <r-cell span="3-4"><div class="plant-menu-buttons"> <img class="h-1 clickable" onclick="showPlantInformation(0, 0);" src="assets/icons/description.svg"> <img class="h-1 clickable" onclick="showPlantInformation(0, 1);" src="assets/icons/bloom-time.svg"> <img class="h-1 clickable" onclick="showPlantInformation(0, 2);" src="assets/icons/country.svg"> <img class="h-1 clickable" onclick="showPlantInformation(0, 3);" src="assets/icons/toxicity.svg"> <img class="h-1 clickable" onclick="showPlantInformation(0, 4);" src="assets/icons/lifespan.svg"> <img class="h-1 clickable" onclick="showPlantInformation(0, 5);" src="assets/icons/spread.svg"> <img class="h-1 clickable" onclick="showPlantInformation(0, 6);" src="assets/icons/plant-height.svg"></div><div class="plant-menu"><p class="plant-name bold">Tahitian Screwpine</p><p class="sci-name italic">Pandanus Tectorius</p><div id="plant-menu-0-0" class="plant-description"><p>It is a perennial tropical tree that is salt tolerant and grows in poor, salty or sandy soils. Tahitian screwpine is used to help stabilize soil conditions along coastal and beachfront properties. It also thrives in hot, windy areas and prefers full sun to semi-shade. Plants are dioecious with separate male and female plants. Male flowers are small, fragrant and short-lived. Female flowers are pineapple-like and are followed by fruit heads. Fruits are edible.</p></div><div id="plant-menu-0-1" class="plant-description hidden"><p>Bloom Time: </p></div><div id="plant-menu-0-2" class="plant-description hidden"><p>Country of Origin: Malaysia, Eastern Australia, and the Pacific Islands</p></div><div id="plant-menu-0-3" class="plant-description hidden"><p>Toxicity: -</p></div><div id="plant-menu-0-4" class="plant-description hidden"><p>Lifespan: perennial</p></div><div id="plant-menu-0-5" class="plant-description hidden"><p>Spread: 0.75m</p></div><div id="plant-menu-0-6" class="plant-description hidden"><p>Height: 4-14 m</p></div></div> </r-cell> <r-cell span="5-7"><div style="text-align: right;"> <img src="assets/garden_drop-off_point/0.jpg" class="h-8 cover"><div class="plant-icons"></div></div> </r-cell> </r-grid></div>
-    <div class="plant-infobox" id="plant-1"> <r-grid columns="8"> <r-cell span="3-4"><div class="plant-menu-buttons"> <img class="h-1 clickable" onclick="showPlantInformation(1, 0);" src="assets/icons/description.svg"> <img class="h-1 clickable" onclick="showPlantInformation(1, 1);" src="assets/icons/bloom-time.svg"> <img class="h-1 clickable" onclick="showPlantInformation(1, 2);" src="assets/icons/country.svg"> <img class="h-1 clickable" onclick="showPlantInformation(1, 3);" src="assets/icons/toxicity.svg"> <img class="h-1 clickable" onclick="showPlantInformation(1, 4);" src="assets/icons/lifespan.svg"> <img class="h-1 clickable" onclick="showPlantInformation(1, 5);" src="assets/icons/spread.svg"> <img class="h-1 clickable" onclick="showPlantInformation(1, 6);" src="assets/icons/plant-height.svg"></div><div class="plant-menu"><p class="plant-name bold">Shrimp Plant</p><p class="sci-name italic">Justicia Brandegeeana</p><div id="plant-menu-1-0" class="plant-description"><p>Shrimp plant prefers to grow in full sun to part shade. It is a fast growing, tropical perennial. 
+    <div class="plant-infobox" id="plant-1"> <r-grid columns="8"> <r-cell span="3-4"><div class="plant-menu-buttons"> <img class="h-1 clickable" onclick="showPlantInformation(1, 0);" src="assets/icons/description.svg"> <img class="h-1 clickable" onclick="showPlantInformation(1, 1);" src="assets/icons/bloom-time.svg"> <img class="h-1 clickable" onclick="showPlantInformation(1, 2);" src="assets/icons/country.svg"> <img class="h-1 clickable" onclick="showPlantInformation(1, 3);" src="assets/icons/toxicity.svg"> <img class="h-1 clickable" onclick="showPlantInformation(1, 4);" src="assets/icons/lifespan.svg"> <img class="h-1 clickable" onclick="showPlantInformation(1, 5);" src="assets/icons/spread.svg"> <img class="h-1 clickable" onclick="showPlantInformation(1, 6);" src="assets/icons/plant-height.svg"></div><div class="plant-menu"><p class="plant-name bold">Shrimp Plant</p><p class="sci-name italic">Justicia Brandegeeana</p><div id="plant-menu-1-0" class="plant-description"><p>Shrimp plant prefers to grow in full sun to part shade. It is a fast growing, tropical perennial.
 This evergreen shrub comes from the understory of tropical forests in Mexico, Honduras, and Guatemala. The shrimp plant is a popular, hardy landscaping choice that will attract hummingbirds and butterflies. One look at the distinctive bracts at the tips of its stems will tell you exactly how this plant got its common name.</p></div><div id="plant-menu-1-1" class="plant-description hidden"><p>Bloom Time: </p></div><div id="plant-menu-1-2" class="plant-description hidden"><p>Country of Origin: Mexico, Honduras, and Guatemala</p></div><div id="plant-menu-1-3" class="plant-description hidden"><p>Toxicity: -</p></div><div id="plant-menu-1-4" class="plant-description hidden"><p>Lifespan: perennial</p></div><div id="plant-menu-1-5" class="plant-description hidden"><p>Spread: 0.20m</p></div><div id="plant-menu-1-6" class="plant-description hidden"><p>Height: 1.5m</p></div></div> </r-cell> <r-cell span="5-7"><div style="text-align: right;"> <img src="assets/garden_drop-off_point/1.jpg" class="h-8 cover"><div class="plant-icons"></div></div> </r-cell> </r-grid></div>
     <div class="plant-infobox" id="plant-2"> <r-grid columns="8"> <r-cell span="3-4"><div class="plant-menu-buttons"> <img class="h-1 clickable" onclick="showPlantInformation(2, 0);" src="assets/icons/description.svg"> <img class="h-1 clickable" onclick="showPlantInformation(2, 1);" src="assets/icons/bloom-time.svg"> <img class="h-1 clickable" onclick="showPlantInformation(2, 2);" src="assets/icons/country.svg"> <img class="h-1 clickable" onclick="showPlantInformation(2, 3);" src="assets/icons/toxicity.svg"> <img class="h-1 clickable" onclick="showPlantInformation(2, 4);" src="assets/icons/lifespan.svg"> <img class="h-1 clickable" onclick="showPlantInformation(2, 5);" src="assets/icons/spread.svg"> <img class="h-1 clickable" onclick="showPlantInformation(2, 6);" src="assets/icons/plant-height.svg"></div><div class="plant-menu"><p class="plant-name bold">Pandan</p><p class="sci-name italic">Pandanus Amaryllifolius</p><div id="plant-menu-2-0" class="plant-description"><p>Also known as the fragrant plant, pandan has a sweet, attractive fragrance. It grows as a perennial in Southeast Asia. It is often used in Thai and Asian recipes. The large leaves can be used as wraps, and paste and powder made from the plant are used to flavor desserts.</p></div><div id="plant-menu-2-1" class="plant-description hidden"><p>Bloom Time: </p></div><div id="plant-menu-2-2" class="plant-description hidden"><p>Country of Origin: Southeast Asia</p></div><div id="plant-menu-2-3" class="plant-description hidden"><p>Toxicity: -</p></div><div id="plant-menu-2-4" class="plant-description hidden"><p>Lifespan: preennial</p></div><div id="plant-menu-2-5" class="plant-description hidden"><p>Spread: Its spread depends on species, can be as wide as 20 feet or more.</p></div><div id="plant-menu-2-6" class="plant-description hidden"><p>Height: 1-4.5m</p></div></div> </r-cell> <r-cell span="5-7"><div style="text-align: right;"> <img src="assets/garden_drop-off_point/2.jpg" class="h-8 cover"><div class="plant-icons"></div></div> </r-cell> </r-grid></div>
     <div class="plant-infobox" id="plant-3"> <r-grid columns="8"> <r-cell span="3-4"><div class="plant-menu-buttons"> <img class="h-1 clickable" onclick="showPlantInformation(3, 0);" src="assets/icons/description.svg"> <img class="h-1 clickable" onclick="showPlantInformation(3, 1);" src="assets/icons/bloom-time.svg"> <img class="h-1 clickable" onclick="showPlantInformation(3, 2);" src="assets/icons/country.svg"> <img class="h-1 clickable" onclick="showPlantInformation(3, 3);" src="assets/icons/toxicity.svg"> <img class="h-1 clickable" onclick="showPlantInformation(3, 4);" src="assets/icons/lifespan.svg"> <img class="h-1 clickable" onclick="showPlantInformation(3, 5);" src="assets/icons/spread.svg"> <img class="h-1 clickable" onclick="showPlantInformation(3, 6);" src="assets/icons/plant-height.svg"></div><div class="plant-menu"><p class="plant-name bold">Black Bryony</p><p class="sci-name italic">Dioscorea Communis</p><div id="plant-menu-3-0" class="plant-description"><p>Black Bryony is a climbing plant native to western and central Asia and Europe. Its climbing vine prefers a dense forest understory, and curiously nearly always spirals counter-clockwise. All parts of the black bryony plant are poisonous and should never be ingested raw. Portions of it have, however, been used in topical folk medicines in the past.</p></div><div id="plant-menu-3-1" class="plant-description hidden"><p>Bloom Time: autumn</p></div><div id="plant-menu-3-2" class="plant-description hidden"><p>Country of Origin: Southern and Central Europe</p></div><div id="plant-menu-3-3" class="plant-description hidden"><p>Toxicity: It is highly toxic, if ingested can cause servere irritation of the stomach and intestines, seizures, kidney failure and dangerously slow breathing.</p></div><div id="plant-menu-3-4" class="plant-description hidden"><p>Lifespan: perennial</p></div><div id="plant-menu-3-5" class="plant-description hidden"><p>Spread: 0.20m</p></div><div id="plant-menu-3-6" class="plant-description hidden"><p>Height: 2-4 m</p></div></div> </r-cell> <r-cell span="5-7"><div style="text-align: right;"> <img src="assets/garden_drop-off_point/3.jpg" class="h-8 cover"><div class="plant-icons"></div></div> </r-cell> </r-grid></div>
@@ -104,7 +103,7 @@ This evergreen shrub comes from the understory of tropical forests in Mexico, Ho
                     <!-- Placeholder img -->
                     <img src="assets/resized_earthwatchlogo.jpg">
                 </div>
-                
+
                 <div class="column">
                     <img class="inlineimg" src="assets/instagram.png">
                     <a href="https://instagram.com/vjrobotics">VJ Robotics Makers' Club</a><br>
